testsuite/tests/properties/invalid_dynvar/foo.lkt
grammar foo_grammar {
    @main_rule main_rule <- ExampleNode("example")
}
